Fix profile aligning

--- a/styles.css
+++ b/styles.css
@@ -936,7 +936,7 @@ button:hover,
 
 /* SPT profiles */
 .profile-modal {
-    display: none;
+    display: flex;
     position: fixed;
     top: 0;
     left: 0;
